apps/forgejo/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo
spec:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        resources:
          requests:
            storage: 128Gi
        storageClassName: nishir-capacity
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: network.speed.2.5g
                    operator: In
                    values:
                      - "true"
              weight: 50
