apps/forgejo/overlays/nishir/patch-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: forgejo
spec:
  parentRefs:
    - name: forgejo
      sectionName: ssh
